finish dataset construction code

--- a/data/raw/cs/retrieval_augmented_generation/result/taxo_final_gpt-5-2025-08-07/paper_1.yaml
+++ b/data/raw/cs/retrieval_augmented_generation/result/taxo_final_gpt-5-2025-08-07/paper_1.yaml
@@ -44,7 +44,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Generation"
+  - "NLP Applications"
 - "title": "FlagEmbedding Reranker"
   "unique_context_marker": "[6]"
   "block_ids":
@@ -68,13 +68,13 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Generation"
+  - "NLP Applications"
 - "title": "Retrieval-augmented generation for knowledge-intensive nlp tasks"
   "unique_context_marker": "[9]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Retrieval Integration for Generation"
 - "title": "Unlocking the Potential of Large Language Models for Explainable Recommendations"
@@ -84,7 +84,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Generation"
+  - "NLP Applications"
 - "title": "The probabilistic relevance framework: BM25 and beyond"
   "unique_context_marker": "[11]"
   "block_ids":
