--- a/data/raw/cs/retrieval_augmented_generation/result/taxo_reverse_gpt-5-2025-08-07/paper_1.yaml
+++ b/data/raw/cs/retrieval_augmented_generation/result/taxo_reverse_gpt-5-2025-08-07/paper_1.yaml
@@ -14,12 +14,12 @@
   - 6
   - 9
   "intent_labels":
-  - "Model/Architecture Adoption"
+  - null
   - "Model/Architecture Adoption"
   - null
   "topic_labels":
   - "Parameter-Accessible Generators (White-box)"
-  - "Parameter-Inaccessible Generators (Black-box)"
+  - null
   - "Parameter-Inaccessible Generators (Black-box)"
 - "title": "Language models are few-shot learners"
   "unique_context_marker": "[3]"
@@ -36,7 +36,7 @@
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Retriever Type"
+  - null
 - "title": "Towards Personalized Evaluation of Large Language Models with An Anonymous Crowd-Sourcing Platform"
   "unique_context_marker": "[5]"
   "block_ids":
@@ -44,7 +44,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Generation"
+  - "NLP Applications"
 - "title": "FlagEmbedding Reranker"
   "unique_context_marker": "[6]"
   "block_ids":
@@ -52,13 +52,13 @@
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Context Curation and Compression"
+  - null
 - "title": "LoRA: Low-Rank Adaptation of Large Language Models"
   "unique_context_marker": "[7]"
   "block_ids":
   - 5
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - null
   "topic_labels":
   - "Parameter-Accessible Generators (White-box)"
 - "title": "Reformulating Sequential Recommendation: Learning Dynamic User Interest with Content-enriched Language Modeling"
@@ -68,7 +68,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Generation"
+  - "NLP Applications"
 - "title": "Retrieval-augmented generation for knowledge-intensive nlp tasks"
   "unique_context_marker": "[9]"
   "block_ids":
@@ -76,7 +76,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Input-Layer Integration"
+  - null
 - "title": "Unlocking the Potential of Large Language Models for Explainable Recommendations"
   "unique_context_marker": "[10]"
   "block_ids":
@@ -84,7 +84,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Generation"
+  - "NLP Applications"
 - "title": "The probabilistic relevance framework: BM25 and beyond"
   "unique_context_marker": "[11]"
   "block_ids":
@@ -92,7 +92,7 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Retriever Type"
+  - null
 - "title": "Chain-of-thought prompting elicits reasoning in large language models"
   "unique_context_marker": "[12]"
   "block_ids":
